--- a/test/fixtures/comments.yml
+++ b/test/fixtures/comments.yml
@@ -1,9 +1,12 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  full_name: MyString
-  email: MyString
+  full_name: User One
+  email: user-one@example.com
+  content: 'Lorem ipsum'
 
 two:
-  full_name: MyString
-  email: MyString
+  full_name: User Two
+  email: user-two@example.com
+  content: 'Dolor epset'
+  comment: one
